--- a/_config.yml
+++ b/_config.yml
@@ -76,4 +76,6 @@ theme: next
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
-  type:
+  type: git
+  repository: https://github.com/t0nychen/t0nychen.github.io.git
+  branch: master
