--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: John Doe
-language:
+title: 咬文嚼字假正经
+subtitle: 拖泥带水真絮叨
+description: 闲时心血来潮随笔细述一二看似鸡毛蒜皮小事，免得蝇营狗苟忘记初衷迷惘仓皇不知何去何从。
+author: 秦楚豫
+language: zh-Hans
 timezone:
 
 # URL
@@ -52,8 +52,7 @@ tag_map:
 ## Hexo uses Connect as a server
 ## You can customize the logger format as defined in
 ## http://www.senchalabs.org/connect/logger.html
-port: 4001                     ##定义测试访问的端口号
-server_ip: 0.0.0.0
+
 
 
 # Date / Time format
