--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -83,8 +83,8 @@ social_icons:
 
 
 # Sidebar Avatar
-# in theme directory(source/images): /images/avatar.jpg
-# in site  directory(source/uploads): /uploads/avatar.jpg
+# in theme directory(source/images): /images/default_avatar.jpg
+# in site  directory(source/uploads): /uploads/default_avatar.jpg
 # default : /images/default_avatar.jpg
 #avatar:
 
