Change link from https to ssh for fix deploy issues

--- a/_config.yml
+++ b/_config.yml
@@ -76,5 +76,6 @@ theme: next
 ## Docs: http://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://github.com/t0nychen/t0nychen.github.io.git
+  repository: git@github.com:t0nychen/t0nychen.github.io.git
+  ##Change link from https to ssh for fix deploy issues
   branch: master
