Modify the description of _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 咬文嚼字假正经
-subtitle: 拖泥带水真絮叨
+subtitle: 拖泥带水真啰嗦
 description: 闲时心血来潮随笔细述一二看似鸡毛蒜皮小事，免得蝇营狗苟忘记初衷迷惘仓皇不知何去何从。
 author: 秦楚豫
 language: zh-Hans
