--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -14,7 +14,7 @@ keywords: "Hexo, NexT"
 rss:
 
 # Specify the date when the site was setup
-#since: 2015
+since: 2015
 
 
 
@@ -27,10 +27,10 @@ rss:
 # Remove leading slashes ( "/archives" -> "archives" )
 menu:
   home: /
-  #categories: /categories
-  #about: /about
+  categories: /categories
   archives: /archives
   tags: /tags
+  about: /about
   #commonweal: /404.html
 
 
@@ -69,9 +69,11 @@ scheme: Muse
 
 
 # Social links
-# social:
-  #GitHub:
-  #Others:
+social:
+  GitHub: https://github.com/t0nychen
+  Twitter: https://twitter.com/cheshirefr0g
+  Weibo: http://weibo.com/tonyfrog
+  ZhiHu: https://www.zhihu.com/people/cheshiret
 
 # Social Icons
 social_icons:
@@ -80,6 +82,7 @@ social_icons:
   GitHub: github
   Twitter: twitter
   Weibo: weibo
+  ZhiHu: zhihu
 
 
 # Sidebar Avatar
@@ -100,7 +103,7 @@ toc:
 # Creative Commons 4.0 International License.
 # http://creativecommons.org/
 # Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
-#creative_commons: by-nc-sa
+  creative_commons: by-nc-sa
 #creative_commons:
 
 sidebar:
@@ -194,26 +197,26 @@ mathjax:
 duoshuo_info:
   ua_enable: true
   admin_enable: false
-  user_id: 0
-  #admin_nickname: ROOT
+  user_id: 6259187377013523000
+  admin_nickname: ROOT
 
 
 # Facebook SDK Support.
 # https://github.com/iissnan/hexo-theme-next/pull/410
 facebook_sdk:
-  enable: false
-  app_id:       #<app_id>
-  fb_admin:     #<user_id>
-  like_button:  #true
-  webmaster:    #true
+  enable: true
+  app_id:       550757978433629
+  fb_admin:     1592440677
+  like_button:  true
+  webmaster:    true
 
 
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: 6OLgHMA2tGJOvlMDxLlyYxDm-gzGzoHsz
+  app_key: BoE4JtmcJfQiSHVKOoSrEhIJ
 
 
 # Tencent analytics ID
